# pandas_keeper

./: .flake8  .gitignore  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
pandas_keeper/: __init__.py  assert_check.py  functions.py  read.py  safe_merger.py  write.py
pandas_keeper/df_keeper/: column_keeper.py  df_keeper.py  importer.py  model.py  model_extra_arg_forbidden.py  read.py
tests/: conftest.py  test_assert_check.py  test_init.py  test_logger.py  test_safe_merger.py
tests/data/: data.csv  df.csv
tests/df_keeper/: test_column_keeper.py  test_df_keeper.py  test_importer.py  test_model.py  test_read.py
tests/pandas/: test_assert_check.py  test_safe_merger.py
tests/pandas_tools/: test_assert_check.py  test_init.py  test_safe_merger.py
tests/pytest_helpers/: utils.py
tools/: __init__.py  data.py  logger.py  read.py  write.py
tools/pandas/: assert_check.py  safe_merger.py
tools/pandas_tools/: __init__.py  assert_check.py  safe_merger.py
